Created Box Handler class that handles does jobs in regards with the box array. Next feature - maybe multi-pickup?

--- a/SANDBox/SANDBox.vcxproj
+++ b/SANDBox/SANDBox.vcxproj
@@ -144,10 +144,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp" />
+    <ClCompile Include="BoxesHandler.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
+    <ClInclude Include="BoxesHandler.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Point.h" />
   </ItemGroup>
