--- a/SANDBox/SANDBox.vcxproj.filters
+++ b/SANDBox/SANDBox.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Box.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BoxesHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Box.h">
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Mouse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoxesHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
