--- a/SANDBox/SANDBox.vcxproj.filters
+++ b/SANDBox/SANDBox.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="BoxesHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="olcPixelGameEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
