--- a/SANDBox/SANDBox.vcxproj.filters
+++ b/SANDBox/SANDBox.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CircleSegment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
