--- a/SANDBox/SANDBox.vcxproj.filters
+++ b/SANDBox/SANDBox.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Circle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InterfaceRect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CircleSegment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InterfaceRect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
