--- a/SANDBox/SANDBox.vcxproj
+++ b/SANDBox/SANDBox.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="CircleSegment.h" />
     <ClInclude Include="InterfaceRect.h" />
+    <ClInclude Include="olcPixelGameEngine.h" />
     <ClInclude Include="Point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
